周一啊啊啊

--- a/share-bike/public/index.html
+++ b/share-bike/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=qyjEwp4BiwNNVSInefdh9SEL6n4qsDfg"></script>
   </head>
   <body>
     <noscript>
